Changes more file names

--- a/src/screens/jobs.html
+++ b/src/screens/jobs.html
@@ -262,7 +262,7 @@
                     <tbody>
                       <tr>
                         <th scope="row">
-                          <a href="indivJobDet.html">99999</a>
+                          <a href="jobsIndivDet.html">99999</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -283,7 +283,7 @@
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a href="indivJobDet.html">99998</a>
+                          <a href="jobsIndivDet.html">99998</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -304,7 +304,7 @@
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a href="indivJobDet.html">99997</a>
+                          <a href="jobsIndivDet.html">99997</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -325,7 +325,7 @@
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a href="indivJobDet.html">99996</a>
+                          <a href="jobsIndivDet.html">99996</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -344,7 +344,7 @@
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a href="indivJobDet.html">99995</a>
+                          <a href="jobsIndivDet.html">99995</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -425,7 +425,7 @@
                     <tbody>
                       <tr>
                         <th scope="row">
-                          <a href="indivJobDet.html">99999</a>
+                          <a href="jobsIndivDet.html">99999</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -446,7 +446,7 @@
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a href="indivJobDet.html">99998</a>
+                          <a href="jobsIndivDet.html">99998</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -467,7 +467,7 @@
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a href="indivJobDet.html">99997</a>
+                          <a href="jobsIndivDet.html">99997</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -488,7 +488,7 @@
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a href="indivJobDet.html">99996</a>
+                          <a href="jobsIndivDet.html">99996</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -507,7 +507,7 @@
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a href="indivJobDet.html">99995</a>
+                          <a href="jobsIndivDet.html">99995</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -579,7 +579,7 @@
                     <tbody>
                       <tr>
                         <th scope="row">
-                          <a href="indivJobDet.html">99999</a>
+                          <a href="jobsIndivDet.html">99999</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -600,7 +600,7 @@
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a href="indivJobDet.html">99998</a>
+                          <a href="jobsIndivDet.html">99998</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -621,7 +621,7 @@
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a href="indivJobDet.html">99997</a>
+                          <a href="jobsIndivDet.html">99997</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -642,7 +642,7 @@
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a href="indivJobDet.html">99996</a>
+                          <a href="jobsIndivDet.html">99996</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -661,7 +661,7 @@
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a href="indivJobDet.html">99995</a>
+                          <a href="jobsIndivDet.html">99995</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
