--- a/src/screens/jobsP.html
+++ b/src/screens/jobsP.html
@@ -246,7 +246,7 @@
                     <tbody>
                       <tr>
                         <th scope="row">
-                          <a href="pIndivJobDet.html">99999</a>
+                          <a href="jobsIndivDetP.html">99999</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -262,7 +262,7 @@
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a href="pIndivJobDet.html">99998</a>
+                          <a href="jobsIndivDetP.html">99998</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -278,7 +278,7 @@
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a href="pIndivJobDet.html">99997</a>
+                          <a href="jobsIndivDetP.html">99997</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -294,7 +294,7 @@
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a href="pIndivJobDet.html">99996</a>
+                          <a href="jobsIndivDetP.html">99996</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -310,7 +310,7 @@
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a href="pIndivJobDet.html">99995</a>
+                          <a href="jobsIndivDetP.html">99995</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -390,7 +390,7 @@
                     <tbody>
                       <tr>
                         <th scope="row">
-                          <a href="pIndivJobDet.html">99999</a>
+                          <a href="jobsIndivDetP.html">99999</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -406,7 +406,7 @@
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a href="pIndivJobDet.html">99998</a>
+                          <a href="jobsIndivDetP.html">99998</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -422,7 +422,7 @@
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a href="pIndivJobDet.html">99997</a>
+                          <a href="jobsIndivDetP.html">99997</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -438,7 +438,7 @@
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a href="pIndivJobDet.html">99996</a>
+                          <a href="jobsIndivDetP.html">99996</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -454,7 +454,7 @@
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a href="pIndivJobDet.html">99995</a>
+                          <a href="jobsIndivDetP.html">99995</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -525,7 +525,7 @@
                     <tbody>
                       <tr>
                         <th scope="row">
-                          <a href="pIndivJobDet.html">99999</a>
+                          <a href="jobsIndivDetP.html">99999</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -541,7 +541,7 @@
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a href="pIndivJobDet.html">99998</a>
+                          <a href="jobsIndivDetP.html">99998</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -557,7 +557,7 @@
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a href="pIndivJobDet.html">99997</a>
+                          <a href="jobsIndivDetP.html">99997</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -573,7 +573,7 @@
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a href="pIndivJobDet.html">99996</a>
+                          <a href="jobsIndivDetP.html">99996</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
@@ -589,7 +589,7 @@
                       </tr>
                       <tr>
                         <th scope="row">
-                          <a href="pIndivJobDet.html">99995</a>
+                          <a href="jobsIndivDetP.html">99995</a>
                         </th>
                         <td>Introduction to Computer System</td>
                         <td>CSCI 1120</td>
