--- a/src/screens/jobsProfile.html
+++ b/src/screens/jobsProfile.html
@@ -265,28 +265,28 @@ B00:B00123456   Email:ab12345@dal.ca    Phone:(123) 456 789</pre
                       <tbody>
                         <tr>
                           <th scope="row">
-                            <a href="indivJobDet.html">CSCI 1120</a>
+                            <a href="jobsIndivDet.html">CSCI 1120</a>
                           </th>
                           <td>Detail Information</td>
                           <td>2077-02-31 12.00</td>
                         </tr>
                         <tr>
                           <th scope="row">
-                            <a href="indivJobDet.html">CSCI 1120</a>
+                            <a href="jobsIndivDet.html">CSCI 1120</a>
                           </th>
                           <td>Detail Information</td>
                           <td>2077-02-31 12.00</td>
                         </tr>
                         <tr>
                           <th scope="row">
-                            <a href="indivJobDet.html">CSCI 1120</a>
+                            <a href="jobsIndivDet.html">CSCI 1120</a>
                           </th>
                           <td>Detail Information</td>
                           <td>2077-02-31 12.00</td>
                         </tr>
                         <tr>
                           <th scope="row">
-                            <a href="indivJobDet.html">CSCI 1120</a>
+                            <a href="jobsIndivDet.html">CSCI 1120</a>
                           </th>
                           <td>Detail Information</td>
                           <td>2077-02-31 12.00</td>
@@ -351,7 +351,7 @@ B00:B00123456   Email:ab12345@dal.ca    Phone:(123) 456 789</pre
                       <tbody>
                         <tr>
                           <th scope="row">
-                            <a href="indivJobDet.html">99999</a>
+                            <a href="jobsIndivDet.html">99999</a>
                           </th>
                           <td>CSCI 1120</td>
                           <td>
@@ -364,7 +364,7 @@ B00:B00123456   Email:ab12345@dal.ca    Phone:(123) 456 789</pre
                         </tr>
                         <tr>
                           <th scope="row">
-                            <a href="indivJobDet.html">99999</a>
+                            <a href="jobsIndivDet.html">99999</a>
                           </th>
                           <td>CSCI 1120</td>
                           <td>
@@ -377,7 +377,7 @@ B00:B00123456   Email:ab12345@dal.ca    Phone:(123) 456 789</pre
                         </tr>
                         <tr>
                           <th scope="row">
-                            <a href="indivJobDet.html">99999</a>
+                            <a href="jobsIndivDet.html">99999</a>
                           </th>
                           <td>CSCI 1120</td>
                           <td>
@@ -390,7 +390,7 @@ B00:B00123456   Email:ab12345@dal.ca    Phone:(123) 456 789</pre
                         </tr>
                         <tr>
                           <th scope="row">
-                            <a href="indivJobDet.html">99999</a>
+                            <a href="jobsIndivDet.html">99999</a>
                           </th>
                           <td>CSCI 1120</td>
                           <td>
