--- a/src/screens/pPostings.html
+++ b/src/screens/pPostings.html
@@ -773,7 +773,7 @@
                       <tbody>
                         <tr>
                           <th scope="row">
-                            <a href="indivJobDet.html">99999</a>
+                            <a href="jobsIndivDetP.html">99999</a>
                           </th>
                           <td>CSCI 1120</td>
                           <td>Someone</td>
@@ -786,7 +786,7 @@
                         </tr>
                         <tr>
                           <th scope="row">
-                            <a href="indivJobDet.html">99999</a>
+                            <a href="jobsIndivDetP.html">99999</a>
                           </th>
                           <td>CSCI 1120</td>
                           <td>Someone</td>
