--- a/src/screens/jobs.html
+++ b/src/screens/jobs.html
@@ -176,38 +176,37 @@
 </div>
 <div class="scrollbar-sidebar ps ps--active-y">
 	<div class="app-sidebar__inner">
-		<ul class="vertical-nav-menu metismenu">
-			<li>
-				<a href="jobs.html" class="mm-active">
-					<i class="metismenu-icon pe-7s-pendrive"></i>
-					Jobs
-				</a>
-			</li>
+    <ul class="vertical-nav-menu metismenu">
+      <li>
+        <a href="jobs.html" class="mm-active">
+          <i class="metismenu-icon pe-7s-pendrive"></i>
+          Jobs
+        </a>
+      </li>
 
-			<li>
-				<a href="jobsProfile.html">
-					<i class="metismenu-icon pe-7s-user"></i>
-					My Profile
-				</a>
-			</li>
-			<li class="app-sidebar__heading">Shortcut</li>
+      <li>
+        <a href="jobsProfile.html">
+          <i class="metismenu-icon pe-7s-user"></i>
+          My Profile
+        </a>
+      </li>
 
-			<!-- This is a pop up, so please modify this by Su-->
-			<li>
-				<a data-toggle="modal" data-target="#uploadDocument" />
-					<i class="metismenu-icon pe-7s-file"></i>
-					Upload Documents
-			</li>
+      <li>
+        <div tabindex="-1" class="dropdown-divider"></div>
+      </li>
 
-			<!-- This is a pop up, so please modify this by Su-->
-			<li>
-				<a data-toggle="modal" data-target="#tagBox" />
-					<i class="metismenu-icon pe-7s-id"></i>
-					Tags
-				</a>
-			</li>
-		</ul>
-	</div>
+      <!-- This is a pop up, so please modify this by Su-->
+      <li>
+        <a data-toggle="modal" data-target="#uploadDocument">
+          <i class="metismenu-icon pe-7s-file"></i>
+          Upload Documents
+      </a></li><li><a data-toggle="modal" data-target="#tagBox">
+          <i class="metismenu-icon pe-7s-id"></i>
+          Tags
+        </a>
+      </li>
+    </ul>
+  </div>
 	<div class="ps__rail-x" style="left: 0px; bottom: 0px;">
 		<div
 		class="ps__thumb-x"
