--- a/src/screens/jobs.html
+++ b/src/screens/jobs.html
@@ -1,4 +1,4 @@
-<!-- This is the job main dashboard -->
+<!-- This is the main job dashboard for students-->
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
@@ -176,37 +176,37 @@
 </div>
 <div class="scrollbar-sidebar ps ps--active-y">
 	<div class="app-sidebar__inner">
-    <ul class="vertical-nav-menu metismenu">
-      <li>
-        <a href="jobs.html" class="mm-active">
-          <i class="metismenu-icon pe-7s-pendrive"></i>
-          Jobs
-        </a>
-      </li>
+		<ul class="vertical-nav-menu metismenu">
+			<li>
+				<a href="jobs.html" class="mm-active">
+					<i class="metismenu-icon pe-7s-pendrive"></i>
+					Jobs
+				</a>
+			</li>
 
-      <li>
-        <a href="jobsProfile.html">
-          <i class="metismenu-icon pe-7s-user"></i>
-          My Profile
-        </a>
-      </li>
+			<li>
+				<a href="jobsProfile.html">
+					<i class="metismenu-icon pe-7s-user"></i>
+					My Profile
+				</a>
+			</li>
 
-      <li>
-        <div tabindex="-1" class="dropdown-divider"></div>
-      </li>
+			<li>
+				<div tabindex="-1" class="dropdown-divider"></div>
+			</li>
 
-      <!-- This is a pop up, so please modify this by Su-->
-      <li>
-        <a data-toggle="modal" data-target="#uploadDocument">
-          <i class="metismenu-icon pe-7s-file"></i>
-          Upload Documents
-      </a></li><li><a data-toggle="modal" data-target="#tagBox">
-          <i class="metismenu-icon pe-7s-id"></i>
-          Tags
-        </a>
-      </li>
-    </ul>
-  </div>
+			<!-- This is a pop up, so please modify this by Su-->
+			<li>
+				<a data-toggle="modal" data-target="#uploadDocument">
+					<i class="metismenu-icon pe-7s-file"></i>
+					Upload Documents
+				</a></li><li><a data-toggle="modal" data-target="#tagBox">
+					<i class="metismenu-icon pe-7s-id"></i>
+					Tags
+				</a>
+			</li>
+		</ul>
+	</div>
 	<div class="ps__rail-x" style="left: 0px; bottom: 0px;">
 		<div
 		class="ps__thumb-x"
@@ -235,13 +235,13 @@
 				class="mb-2 mr-2 btn btn-primary btn-lg"
 				data-toggle="modal" data-target="#searchBox"
 				>
-				   Search   
+				Search   
 			</button>
 			<button
 			class="mb-2 mr-2 btn btn-primary btn-lg"
 			data-toggle="modal" data-target="#tagBox"
 			>
-			    Tags    
+			Filter    
 		</button>
 	</div>
 </div>
@@ -813,85 +813,85 @@
 		</div>
 	</div>
 	<div class="modal fade" id="uploadDocument" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" style="display: none;">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Upload Documents</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">×</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class="dropdown d-inline-block">
-          <button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-secondary">Select Type</button>
-          <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu">
-            <button type="button" tabindex="0" class="dropdown-item">CV</button>
-            <button type="button" tabindex="0" class="dropdown-item">Resume</button>
-            <button type="button" tabindex="0" class="dropdown-item">Cover Letter</button>
-            <button type="button" tabindex="0" class="dropdown-item">Transcript</button>
-          </div>
-          <form class="d-inline-block"> 
-            <input type="file">
-            <input class="mb-2 mr-2 btn-transition btn btn-outline-success" type="submit" value="Upload">
-          </form>
-        </div>
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Upload Documents</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">×</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<div class="dropdown d-inline-block">
+						<button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-secondary">Select Type</button>
+						<div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu">
+							<button type="button" tabindex="0" class="dropdown-item">CV</button>
+							<button type="button" tabindex="0" class="dropdown-item">Resume</button>
+							<button type="button" tabindex="0" class="dropdown-item">Cover Letter</button>
+							<button type="button" tabindex="0" class="dropdown-item">Transcript</button>
+						</div>
+						<form class="d-inline-block"> 
+							<input type="file">
+							<input class="mb-2 mr-2 btn-transition btn btn-outline-success" type="submit" value="Upload">
+						</form>
+					</div>
 
-        <div class="dropdown d-inline-block">
-          <button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-secondary">Select Type</button>
-          <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu">
-            <button type="button" tabindex="0" class="dropdown-item">CV</button>
-            <button type="button" tabindex="0" class="dropdown-item">Resume</button>
-            <button type="button" tabindex="0" class="dropdown-item">Cover Letter</button>
-            <button type="button" tabindex="0" class="dropdown-item">Transcript</button>
-          </div>
-          <form class="d-inline-block"> 
-            <input type="file">
-            <input class="mb-2 mr-2 btn-transition btn btn-outline-success" type="submit" value="Upload">
-          </form>
-        </div>
+					<div class="dropdown d-inline-block">
+						<button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-secondary">Select Type</button>
+						<div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu">
+							<button type="button" tabindex="0" class="dropdown-item">CV</button>
+							<button type="button" tabindex="0" class="dropdown-item">Resume</button>
+							<button type="button" tabindex="0" class="dropdown-item">Cover Letter</button>
+							<button type="button" tabindex="0" class="dropdown-item">Transcript</button>
+						</div>
+						<form class="d-inline-block"> 
+							<input type="file">
+							<input class="mb-2 mr-2 btn-transition btn btn-outline-success" type="submit" value="Upload">
+						</form>
+					</div>
 
-        <div class="dropdown d-inline-block">
-          <button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-secondary">Select Type</button>
-          <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu">
-            <button type="button" tabindex="0" class="dropdown-item">CV</button>
-            <button type="button" tabindex="0" class="dropdown-item">Resume</button>
-            <button type="button" tabindex="0" class="dropdown-item">Cover Letter</button>
-            <button type="button" tabindex="0" class="dropdown-item">Transcript</button>
-          </div>
-          <form class="d-inline-block"> 
-            <input type="file">
-            <input class="mb-2 mr-2 btn-transition btn btn-outline-success" type="submit" value="Upload">
-          </form>
-        </div>
+					<div class="dropdown d-inline-block">
+						<button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-secondary">Select Type</button>
+						<div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu">
+							<button type="button" tabindex="0" class="dropdown-item">CV</button>
+							<button type="button" tabindex="0" class="dropdown-item">Resume</button>
+							<button type="button" tabindex="0" class="dropdown-item">Cover Letter</button>
+							<button type="button" tabindex="0" class="dropdown-item">Transcript</button>
+						</div>
+						<form class="d-inline-block"> 
+							<input type="file">
+							<input class="mb-2 mr-2 btn-transition btn btn-outline-success" type="submit" value="Upload">
+						</form>
+					</div>
 
-        <div class="dropdown d-inline-block">
-          <button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-secondary">Select Type</button>
-          <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu">
-            <button type="button" tabindex="0" class="dropdown-item">CV</button>
-            <button type="button" tabindex="0" class="dropdown-item">Resume</button>
-            <button type="button" tabindex="0" class="dropdown-item">Cover Letter</button>
-            <button type="button" tabindex="0" class="dropdown-item">Transcript</button>
-          </div>
-          <form class="d-inline-block"> 
-            <input type="file">
-            <input class="mb-2 mr-2 btn-transition btn btn-outline-success" type="submit" value="Upload">
-          </form>
-        </div>
+					<div class="dropdown d-inline-block">
+						<button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-secondary">Select Type</button>
+						<div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu">
+							<button type="button" tabindex="0" class="dropdown-item">CV</button>
+							<button type="button" tabindex="0" class="dropdown-item">Resume</button>
+							<button type="button" tabindex="0" class="dropdown-item">Cover Letter</button>
+							<button type="button" tabindex="0" class="dropdown-item">Transcript</button>
+						</div>
+						<form class="d-inline-block"> 
+							<input type="file">
+							<input class="mb-2 mr-2 btn-transition btn btn-outline-success" type="submit" value="Upload">
+						</form>
+					</div>
 
-        <div class="dropdown d-inline-block">
-          <button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-secondary">Select Type</button>
-          <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu">
-            <button type="button" tabindex="0" class="dropdown-item">CV</button>
-            <button type="button" tabindex="0" class="dropdown-item">Resume</button>
-            <button type="button" tabindex="0" class="dropdown-item">Cover Letter</button>
-            <button type="button" tabindex="0" class="dropdown-item">Transcript</button>
-          </div>
-          <form class="d-inline-block"> 
-            <input type="file">
-            <input class="mb-2 mr-2 btn-transition btn btn-outline-success" type="submit" value="Upload">
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+					<div class="dropdown d-inline-block">
+						<button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-secondary">Select Type</button>
+						<div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu">
+							<button type="button" tabindex="0" class="dropdown-item">CV</button>
+							<button type="button" tabindex="0" class="dropdown-item">Resume</button>
+							<button type="button" tabindex="0" class="dropdown-item">Cover Letter</button>
+							<button type="button" tabindex="0" class="dropdown-item">Transcript</button>
+						</div>
+						<form class="d-inline-block"> 
+							<input type="file">
+							<input class="mb-2 mr-2 btn-transition btn btn-outline-success" type="submit" value="Upload">
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
