--- a/src/screens/jobsIndivDetP.html
+++ b/src/screens/jobsIndivDetP.html
@@ -1,5 +1,5 @@
-<!-- The job posting for both prof.html and jobs.html
-Use to display a list of jobs. -->
+<!-- This page will diplay the detailed information about a job posting 
+  to professors. They can only view -->
 <html lang="en">
   <head>
     <meta charset="utf-8" />
