--- a/jobsP.html
+++ b/jobsP.html
@@ -190,10 +190,7 @@
 
 			<!-- This is a pop up, so please modify this by Su-->
 			<li>
-				<a data-toggle="modal" data-target="#uploadDocument">
-					<i class="metismenu-icon pe-7s-file"></i>
-					Upload Documents
-				</a></li><li><a data-toggle="modal" data-target="#tagBox">
+				<a data-toggle="modal" data-target="#tagBox">
 					<i class="metismenu-icon pe-7s-id"></i>
 					Tags
 				</a>
@@ -691,12 +688,8 @@
 			</div>
 		</div>
 		<script type="text/javascript" src="./assets/scripts/main.js"></script>
-		<div class="jvectormap-tip"></div>
-	</body>
-	</html>
-
-
-	<div class="modal fade" id="searchBox" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" style="display: none;" aria-modal="true">
+		<!--Modal for Search-->
+		<div class="modal fade" id="searchBox" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" style="display: none;" aria-modal="true">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -727,166 +720,87 @@
 
 						<div class="position-relative form-group"><label for="jobTitleSearch" class="">Job Title</label><input name="jobtitle" id="jobTitleSearch" placeholder="Job Title" class="form-control"></div>
 						<div class="position-relative form-group"><label for="jobDescriptionSearch" class="">Job Discription</label><input name="jobdescription" id="jobDescriptionSearch" placeholder="Job Description" class="form-control"></div>
-						<div class="position-relative form-group"><label for="jobRequirementSearch" class="">Job Requirement</label><input name="jobrequirement" id="jobRequirementSearch" placeholder="Job Requirement" class="form-control"></div>
-						<div class="position-relative form-group"><label for="additionInfoSearch" class="">Additional Info</label><textarea name="additioninfo" id="additionInfoSearch" class="form-control"></textarea></div>
 						<input class="mt-1 btn btn-primary" type="submit"></input>
 					</form>
 				</div>
 			</div>
 		</div>
-	</div>
+		</div>
 
-	<div class="modal fade bd-example-modal-lg" id="tagBox" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" style="display: none;" aria-hidden="true">
-		<div class="modal-dialog modal-lg">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="exampleModalLongTitle">Tags</h5>
+		<!--Modal for Tags/Filter-->
+		<div class="modal fade bd-example-modal-lg" id="tagBox" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" style="display: none;" aria-hidden="true">
+			<div class="modal-dialog modal-lg">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="exampleModalLongTitle">Tags</h5>
 
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-						<span aria-hidden="true">×</span>
-					</button>
-				</div>
-				<div class="modal-body">
-					<h6 class="card-subtitle">Click on a tag to filter job postings</h6>
-					<div class="d-inline-block">
-						<h6 class="mb-0 card-subtitle">Recents:</h6>
-						<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-focus">
-							<p>CS(1)</p>
-						</button>
-						<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-focus">
-							<p>Web-Dev(3)</p>
-						</button>
-						<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-focus">
-							<p>Cloud-Computing(1)</p>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">×</span>
 						</button>
 					</div>
+					<div class="modal-body">
+						<h6 class="card-subtitle">Click on a tag to filter job postings</h6>
+						<div class="d-inline-block">
+							<h6 class="mb-0 card-subtitle">Recents:</h6>
+							<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-focus">
+								<p>CS(1)</p>
+							</button>
+							<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-focus">
+								<p>Web-Dev(3)</p>
+							</button>
+							<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-focus">
+								<p>Cloud-Computing(1)</p>
+							</button>
+						</div>
 
-					<br />
-					<div class="d-inline-block">
-						<h6 class="mb-0 card-subtitle">All:</h6>
-						<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
-							<p>CS(1)</p>
-						</button>
-						<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
-							<p>Web-Dev(3)</p>
-						</button>
-						<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
-							<p>Cloud-Computing(1)</p>
-						</button>
-						<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
-							<p>Graphics(7)</p>
-						</button>
-						<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
-							<p>Intro-Programming(10)</p>
-						</button>
-						<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
-							<p>Robotics(4)</p>
-						</button>
 						<br />
-						<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
-							<p>Server-Side-Scripting(5)</p>
-						</button>
-						<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
-							<p>Python(3)</p>
-						</button>
-						<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
-							<p>Algorithms(10)</p>
-						</button>
-						<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
-							<p>Systems-Programming(7)</p>
-						</button>
-						<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
-							<p>Software-Dev(10)</p>
-						</button>
-						<br />
-						<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
-							<p>Java(4)</p>
-						</button>
+						<div class="d-inline-block">
+							<h6 class="mb-0 card-subtitle">All:</h6>
+							<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
+								<p>CS(1)</p>
+							</button>
+							<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
+								<p>Web-Dev(3)</p>
+							</button>
+							<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
+								<p>Cloud-Computing(1)</p>
+							</button>
+							<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
+								<p>Graphics(7)</p>
+							</button>
+							<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
+								<p>Intro-Programming(10)</p>
+							</button>
+							<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
+								<p>Robotics(4)</p>
+							</button>
+							<br />
+							<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
+								<p>Server-Side-Scripting(5)</p>
+							</button>
+							<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
+								<p>Python(3)</p>
+							</button>
+							<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
+								<p>Algorithms(10)</p>
+							</button>
+							<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
+								<p>Systems-Programming(7)</p>
+							</button>
+							<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
+								<p>Software-Dev(10)</p>
+							</button>
+							<br />
+							<button class="mb-2 mr-2 border-0 btn-transition btn btn-outline-light">
+								<p>Java(4)</p>
+							</button>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="modal fade" id="uploadDocument" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" style="display: none;">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="exampleModalLabel">Upload Documents</h5>
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-						<span aria-hidden="true">×</span>
-					</button>
-				</div>
-				<div class="modal-body">
-					<div class="dropdown d-inline-block">
-						<button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-secondary">Select Type</button>
-						<div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu">
-							<button type="button" tabindex="0" class="dropdown-item">CV</button>
-							<button type="button" tabindex="0" class="dropdown-item">Resume</button>
-							<button type="button" tabindex="0" class="dropdown-item">Cover Letter</button>
-							<button type="button" tabindex="0" class="dropdown-item">Transcript</button>
-						</div>
-						<form class="d-inline-block"> 
-							<input type="file">
-							<input class="mb-2 mr-2 btn-transition btn btn-outline-success" type="submit" value="Upload">
-						</form>
-					</div>
+		<div class="jvectormap-tip"></div>
+	</body>
+	</html>
 
-					<div class="dropdown d-inline-block">
-						<button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-secondary">Select Type</button>
-						<div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu">
-							<button type="button" tabindex="0" class="dropdown-item">CV</button>
-							<button type="button" tabindex="0" class="dropdown-item">Resume</button>
-							<button type="button" tabindex="0" class="dropdown-item">Cover Letter</button>
-							<button type="button" tabindex="0" class="dropdown-item">Transcript</button>
-						</div>
-						<form class="d-inline-block"> 
-							<input type="file">
-							<input class="mb-2 mr-2 btn-transition btn btn-outline-success" type="submit" value="Upload">
-						</form>
-					</div>
 
-					<div class="dropdown d-inline-block">
-						<button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-secondary">Select Type</button>
-						<div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu">
-							<button type="button" tabindex="0" class="dropdown-item">CV</button>
-							<button type="button" tabindex="0" class="dropdown-item">Resume</button>
-							<button type="button" tabindex="0" class="dropdown-item">Cover Letter</button>
-							<button type="button" tabindex="0" class="dropdown-item">Transcript</button>
-						</div>
-						<form class="d-inline-block"> 
-							<input type="file">
-							<input class="mb-2 mr-2 btn-transition btn btn-outline-success" type="submit" value="Upload">
-						</form>
-					</div>
-
-					<div class="dropdown d-inline-block">
-						<button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-secondary">Select Type</button>
-						<div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu">
-							<button type="button" tabindex="0" class="dropdown-item">CV</button>
-							<button type="button" tabindex="0" class="dropdown-item">Resume</button>
-							<button type="button" tabindex="0" class="dropdown-item">Cover Letter</button>
-							<button type="button" tabindex="0" class="dropdown-item">Transcript</button>
-						</div>
-						<form class="d-inline-block"> 
-							<input type="file">
-							<input class="mb-2 mr-2 btn-transition btn btn-outline-success" type="submit" value="Upload">
-						</form>
-					</div>
-
-					<div class="dropdown d-inline-block">
-						<button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-secondary">Select Type</button>
-						<div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu">
-							<button type="button" tabindex="0" class="dropdown-item">CV</button>
-							<button type="button" tabindex="0" class="dropdown-item">Resume</button>
-							<button type="button" tabindex="0" class="dropdown-item">Cover Letter</button>
-							<button type="button" tabindex="0" class="dropdown-item">Transcript</button>
-						</div>
-						<form class="d-inline-block"> 
-							<input type="file">
-							<input class="mb-2 mr-2 btn-transition btn btn-outline-success" type="submit" value="Upload">
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
