Fixed profile card

--- a/jobsProfile.html
+++ b/jobsProfile.html
@@ -244,9 +244,8 @@
                     />
                     <h5 class="card-title d-inline-block">Don Joe</h5>
                     <br /><br />
-                    <pre>
-							B00:B00123456   Email:ab12345@dal.ca    Phone:(123) 456 789</pre
-                    >
+                    <pre>B00# 123456<br/>Email: ab12345@dal.ca | Phone: (123) 456 789
+                    </pre>
                     <p>Documents: <a>3 Cover Letters </a>, <a>Resume</a></p>
                     <p>Courses: CSCI 1234, CSCI 5678</p>
                   </div>
