--- a/jobsProfile.html
+++ b/jobsProfile.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Language" content="en" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Jobs dashboard</title>
+    <title>Jobs Dashboard</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no"
@@ -56,8 +56,8 @@
     >
       <div class="app-header header-shadow">
         <div class="app-header__logo">
-          <div><h5>DALTAMS</h5></div>
-          <div><h6>Job Dashboard</h6></div>
+          <div class="mr-1"><h5>DALTAMS</h5></div>
+          <div><h6>Job Dashboard (Std View)</h6></div>
           <div class="header__pane ml-auto">
             <div>
               <button
@@ -178,14 +178,14 @@
             <div class="app-sidebar__inner">
               <ul class="vertical-nav-menu metismenu">
                 <li>
-                  <a href="jobs.html" class="mm-active">
+                  <a href="jobs.html">
                     <i class="metismenu-icon pe-7s-pendrive"></i>
                     Jobs
                   </a>
                 </li>
 
                 <li>
-                  <a href="jobsProfile.html">
+                  <a href="jobsProfile.html" class="mm-active">
                     <i class="metismenu-icon pe-7s-user"></i>
                     My Profile
                   </a>
