Added tags in the post a job form

--- a/prof.html
+++ b/prof.html
@@ -788,6 +788,19 @@
                 />
               </div>
               <div class="position-relative form-group">
+                <label for="facultySelection" class="">Tags</label
+                ><select
+                  name="typeselect"
+                  id="typeSelection"
+                  class="form-control"
+                >
+                  <option>---</option>
+                  <option>Networking</option>
+                  <option>Robotics</option>
+                  <option>Data Science</option>
+                </select>
+              </div>
+              <div class="position-relative form-group">
                 <label for="jobDescriptionSearch" class=""
                   >Job Description</label
                 ><textarea
